# domain-search

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  install.sh  main.py  progress.md  pyproject.toml
.chief/prds/generalize/: prd.json  progress.md
.chief/prds/main/: prd.json
.github/workflows/: ci.yml
assets/: demo.tape
domain_search/: cli.py  dns_checker.py
frontend/: index.html  package.json
frontend/src/: App.svelte  app.css
tests/: test_dns_checker.py  test_exporter.py  test_hack_generator.py  test_rdap_checker.py  test_rich_output.py  test_search.py
